# avrprog

./: .gitignore  Makefile  Makefile.am  avrprog.c  avrprog.elf  avrprog.sch  command.h  configure.ac  flash.sh  meson.build  test.sh
avr-isp-10-6/: avr-isp-10-6-cache.lib  avr-isp-10-6.kicad_pcb  avr-isp-10-6.net  avr-isp-10-6.sch
avrprog-pcb/: avrprog-pcb-cache.lib  avrprog-pcb.bak  avrprog-pcb.kicad_pcb  avrprog-pcb.kicad_pcb-bak  avrprog-pcb.net  avrprog-pcb.pro  avrprog-pcb.sch  avrprog-pcb.xml
cross/: atmega8a.txt
pcb/: avrprog-cache.lib  avrprog.gsch2pcb  avrprog.kicad_pcb  avrprog.net  avrprog.pcb  avrprog.pro  avrprog.sch  avrprog.xml
pcb-geda/: avrprog.sch
prog/: Makefile  avrprog.c  avrprog.h  message.c  misc.c  prog.c  prog.h  serial.c  serial.h  spi.c  spi.h
schematics/avrprog/: avrprog.kicad_pcb  avrprog.kicad_prl  avrprog.kicad_pro  avrprog.kicad_sch
src/: Makefile  Makefile.am  avrprog.c  command.h  common.h  f_cpu.h  flash.sh  hd44780.c  hd44780.h  lcd.c  lcd.h  led.c  led.h  main.c  main.h  meson-cross-atmega8a.txt  meson.build  message.c  message.h  misc.c  misc.h  prog.c  prog.h  serial.c  serial.h  spi.c  spi.h  testmain.c
src/test/: meson.build
testsrc/: Makefile.am  main.c  meson.build
